
In process stuff(not working yet):

	* src/gridmetric.c (gridCollapseCost) to compute current cost
	excluding the target edge and the cost after the edge is 
	collapsed to node0 and node1.
	

2004-10-15 10:48 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridCloseTecplotFile) added to allow multiple plots
	in session.
	* test/box1_surface.lay added tecplot 10 layout with small
	multiples for box sides.
	
2004-10-15 01:53 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridCellRatioErrorDerivative) added a hacked
	derivative routine to try and hook up smoothing with edge
	based operators. I think I may need a new smoothing strategy.

2004-10-15 01:53 Mike Park  <mike.park@nasa.gov>

	* src/gridswap.c (gridSwapEdge5) removed debug bestindex report.

2004-10-15 00:33 Mike Park  <mike.park@nasa.gov>

	* src/Makefile.am unitNative noew builds it own copy of the 
	objects that it can have its own #defines. Added a 
	EDGE_BASED_OPERATORS #define that affects gridmetric.c and 
	gridswap.c in the following ways:
	* src/gridmetric.c (gridAR) gridAR returns gridEdgeRatioCost
	when EDGE_BASED_OPERATORS is defined.
	* src/gridswap.c (gridSwapEdge) does not abort swap if mean ratio
	goes down when EDGE_BASED_OPERATORS is defined, this was fighting
	the edge length err.
	* src/unit_main.c set up a loop of six cycles with swaps with -e

2004-10-14 23:48 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridSetConnValuesWithMetricErrorMagnatude) added.
	* src/gridmetric.c (gridEdgeRatioCost) analog to gridAR for edge
	based operators uses.
	* src/gridmetric.c (gridEdgeRatioError) created ina refactoring
	for the above two functions to use.

2004-10-04 23:08 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridAdaptBasedOnConnRankings) added as a spike
	into implementing 'Edge Based Operators'.
	* src/unit_main.c added commandline option -e to activate edge
	based operators

2004-10-04 20:26 Mike Park  <mike.park@nasa.gov>
